Release 1.18

#102 Remove DataResponse.queryProperty

Release 1.17

#98 Start weeding out "id is a single attribue" assumption
#99 Refactor RequestParser expression 'workers' to function-like injectable services

Release 1.16

#93 Remove methods deprecated since 1.14
#94 Chain-of-responsibility execution pipeline
#95 refactoring DAO concept to IProcessorFactory
#96 Switching IRequestParser to the use of contexts

Release 1.15

#58 'cayenneExp' positional parameter binding
#88 Error when using 'cayenneExp' with outer joins ending in relationship
#89 ConstraintsBuilder to allow individual attribute and relationship excludes
#91 Expand EntityDAO concept 
#92 Simplify POJO metadata compilation: LR annotations


Release 1.14 2015-03-16

#79 Simplified API to start request processor builders
#80 ILinkRestService and related builders API refactoring for consistency
#81 LinkRestRuntime should implement JAX RS Feature
#82 LinkRestBuilder: a static shortcut for simple LinkRest stack
#83 Start deploying releases to Maven central
#84 Problems with entity attributes of type java.sql.Time
#87 Upgrade to release version of Cayenne

Release 1.13

#73 cayenneExp with paths containing plus signs (outer joins) are reportedly broken in 1.12

Release 1.12 2015-01-22

#63 Object matching with explicit ID fails when callers do not use correct ID type
#67 Support for per-entity non-persistent properties
#68 Rename Entity to ResourceEntity
#69 Own metadata layer
#70 Added JSON converters for java.sql date/time types
#71 POJOs should be modeled as LrEntities, not ObjEntities
#72 Refactor TreeConstraints into visitor-based ConstraintsBuilder

Release 1.11 2015-01-20

#24 Sencha fake ids and Longs
#66 LinkRestExceptionMapper should log exception stack traces at DEBUG level

Release 1.10 2014-12-08

#55 Object matching fails when callers do not use correct implicit ID type 
#57 Support for Long IDs in updates
#60 Ignore 'query' parameter when no property to match is specified