@@ -1,6 +1,7 @@
 Release 1.18
 
 #102 Remove DataResponse.queryProperty
+#105 SenchaAdapter: filter should disengage if “disabled":true option is passed
 
 Release 1.17
 
